# json_viewer

./: CMakeLists.txt  README.md
src/json-viewer/: CMakeLists.txt  jsonhighlighter.cpp  jsonmodel.cpp  mainwindow.cpp  mainwindow.ui
src/json-viewer/include/: jsonhighlighter.h  jsonmodel.h  mainwindow.h
test/: CMakeLists.txt  testjsonviewer.cpp
